--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
         - KERL_BASE_DIR="$TMPDIR"/.kerl
     matrix: 
         - _KERL_VSN=R16B02
+        - _KERL_VSN=18.3
         - _KERL_VSN=19.2 
 
 script:
