--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ env:
 
 script:
     - ./kerl update releases
-    - ./kerl build "$_KERL_VSN" "$_KERL_VSN"
+    - travis_wait ./kerl build "$_KERL_VSN" "$_KERL_VSN"
     - ./kerl install "$_KERL_VSN" "$TMPDIR/i_$_KERL_VSN"
     - ./kerl status
