--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,10 @@ env:
     global:
         - KERL_BASE_DIR="$TMPDIR"/.kerl
     matrix: 
-        - _KERL_VSN=R16B02
-        - _KERL_VSN=18.3
         - _KERL_VSN=19.2 
 
 script:
     - ./kerl update releases
     - travis_wait ./kerl build "$_KERL_VSN" "$_KERL_VSN"
-    - ./kerl install "$_KERL_VSN" "$TMPDIR/i_$_KERL_VSN"
+    - ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
     - ./kerl status
