--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ os:
 env:
     global:
         - KERL_BASE_DIR="$TMPDIR"/.kerl
+        - KERL_CONFIGURE_DISABLE_APPLICATIONS="odbc"
     matrix: 
         - _KERL_VSN=19.2 
 
 script:
     - ./kerl update releases
-    - travis_wait ./kerl build "$_KERL_VSN" "$_KERL_VSN"
+    - travis_wait 30 ./kerl build "$_KERL_VSN" "$_KERL_VSN"
     - ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
     - ./kerl status
+    - ./kerl delete install "install_$_KERL_VSN"
+    - ./kerl delete build "$_KERL_VSN"
