--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ os: osx
 env:
   global:
     - KERL_BASE_DIR="$TMPDIR"/.kerl
-    - KERL_CONFIGURE_DISABLE_APPLICATIONS="odbc"
+    - KERL_BUILD_BACKEND=git
+    - KERL_CONFIGURE_DISABLE_APPLICATIONS='odbc'
   matrix:
     - _KERL_VSN=19.2
     - _KERL_VSN=18.3
@@ -32,8 +33,9 @@ before_script:
       set +e
     fi
 
+before_script: set -e
+after_script: set +e
 script:
-  - set -e
   - ./kerl update releases
   - travis_wait 45 ./kerl build "$_KERL_VSN" "$_KERL_VSN"
   - ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
@@ -47,4 +49,3 @@ script:
   - kerl_deactivate
   - ./kerl delete installation $(./kerl path install_$_KERL_VSN)
   - ./kerl delete build "$_KERL_VSN"
-  - set +e
