--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
     environment:
       - _KERL_VSN: 17.5
       - KERL_BUILD_BACKEND: git
-      - SHELLCHECK_URL: https://storage.googleapis.com/shellcheck/shellcheck-stable.linux.x86_64.tar.xz
+      - SHELLCHECK_URL: https://storage.googleapis.com/shellcheck/shellcheck-0.4.6.linux.x86_64.tar.xz
     steps:
       - run: apt update && apt upgrade -y
       - run: |
@@ -119,7 +119,7 @@ jobs:
           curl -#fSLo shellcheck.tar.xz $SHELLCHECK_URL
           tar --xz -xvf shellcheck.tar.xz
           mv shellcheck-*/shellcheck /usr/local/bin
-          rm -r shellcheck-*/
+          rm -vr shellcheck-*/
           shellcheck --version
       - checkout
       - run: |
