--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,8 @@ jobs:
              git autoconf dpkg-dev gcc g++ make libncurses-dev \
              libssl1.1 libssl-dev libsctp1 libsctp-dev \
              libodbc1 unixodbc-dev \
-             libwxgtk3.0-dev libgl1-mesa-dev libglu1-mesa-dev libpng16-16 libpng-dev
+             libwxgtk3.0-dev libgl1-mesa-dev libglu1-mesa-dev libpng16-16 libpng-dev \
+             procps
       - run: wx-config --version
       - checkout
       - run: |
