--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,18 +10,6 @@ workflows:
       - trusty_17.0
       - debian8_R15B03-1
 
-build_on_all_cores: &build_on_all_cores
-  command: |
-    export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
-    ./kerl build "$_KERL_VSN" "$_KERL_VSN" | tee build.log
-  no_output_timeout: 45m
-
-activate_then_test_for_crypto: &activate_then_test_for_crypto
-  |
-    source $(./kerl path install_$_KERL_VSN)/activate
-    erl -s crypto -s init stop
-    kerl_deactivate
-
 jobs:
 
   alpine3.7_20.3:
@@ -41,10 +29,17 @@ jobs:
                   libxslt git
       - checkout
       - run: ./kerl update releases
-      - run: *build_on_all_cores
+      - run: &build_on_all_cores |
+          export MAKEFLAGS="-j$(getconf _NPROCESSORS_ONLN)"
+          ./kerl build "$_KERL_VSN" "$_KERL_VSN" | tee build.log
+        no_output_timeout: 45m
       - run: ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
       - run: ./kerl status
-      - run: *activate_then_test_for_crypto
+      - run: &activate_then_test_for_crypto
+          |
+            source $(./kerl path install_$_KERL_VSN)/activate
+            erl -s crypto -s init stop
+            kerl_deactivate
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
