--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,15 @@ jobs:
             kerl_deactivate
       - run: &activate_then_test_docsh
           |
-            source $(./kerl path install_$_KERL_VSN)/activate
-            ./kerl install-docsh
-            erl -noshell -eval 'h(proplists).' -s init stop
-            kerl_deactivate
+            otp_major=$(echo "$_KERL_VSN" | cut -d. -f1)
+            if ((travis_otp_major >= 18)); then
+              source $(./kerl path install_$_KERL_VSN)/activate
+              ./kerl install-docsh
+              kerl_deactivate
+              source $(./kerl path install_$_KERL_VSN)/activate
+              erl -noshell -eval 'h(proplists).' -s init stop
+              kerl_deactivate
+            fi
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
@@ -162,6 +167,7 @@ jobs:
             echo PASS app $app
           done
           kerl_deactivate
+      - run: *activate_then_test_docsh
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
@@ -185,6 +191,7 @@ jobs:
       - run: ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
       - run: ./kerl status
       - run: *activate_then_test_for_crypto
+      - run: *activate_then_test_docsh
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
@@ -205,5 +212,6 @@ jobs:
       - run: ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
       - run: ./kerl status
       - run: *activate_then_test_for_crypto
+      - run: *activate_then_test_docsh
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
