--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - KERL_BUILD_BACKEND=git
   - KERL_CONFIGURE_DISABLE_APPLICATIONS='odbc'
   matrix:
+  - _KERL_VSN=21.0
   - _KERL_VSN=20.3
   - _KERL_VSN=19.3
   - _KERL_VSN=18.3
@@ -21,14 +22,19 @@ script:
 - travis_wait 45 ./kerl build "$_KERL_VSN" "$_KERL_VSN"
 - ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
 - ./kerl status
-- source $(./kerl path install_$_KERL_VSN)/activate
-- erl -s crypto -s init stop
 - |
-  otp_major=$(echo "$TRAVIS_OTP_RELEASE" | cut -d. -f1)
+  source $(./kerl path install_$_KERL_VSN)/activate
+  erl -s crypto -s init stop
+  kerl_deactivate
+- |
+  otp_major=$(echo "$_KERL_VSN" | cut -d. -f1)
   if ((travis_otp_major >= 18)); then
+    source $(./kerl path install_$_KERL_VSN)/activate
     ./kerl install-docsh
+    kerl_deactivate
+    source $(./kerl path install_$_KERL_VSN)/activate
     erl -noshell -eval 'h(proplists).' -s init stop
+    kerl_deactivate
   fi
-- kerl_deactivate
 - ./kerl delete installation $(./kerl path install_$_KERL_VSN)
 - ./kerl delete build "$_KERL_VSN"
