--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
     docker:
       - image: alpine
     environment:
-      - _KERL_VSN: '21.0.1'
+      - _KERL_VSN: '21.0.3'
       - KERL_BUILD_BACKEND: git
       - KERL_BUILD_DOCS: 'yes'
     steps: &alpine_steps
@@ -43,6 +43,17 @@ jobs:
             source $(./kerl path install_$_KERL_VSN)/activate
             erl -s crypto -s init stop
             kerl_deactivate
+      - run: &activate_then_test_docsh
+          |
+            otp_major=$(echo "$_KERL_VSN" | cut -d. -f1)
+            if ((travis_otp_major >= 18)); then
+              source $(./kerl path install_$_KERL_VSN)/activate
+              ./kerl install-docsh
+              kerl_deactivate
+              source $(./kerl path install_$_KERL_VSN)/activate
+              erl -noshell -eval 'h(proplists).' -s init stop
+              kerl_deactivate
+            fi
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
@@ -75,6 +86,7 @@ jobs:
       - run: ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
       - run: ./kerl status
       - run: *activate_then_test_for_crypto
+      - run: *activate_then_test_docsh
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
@@ -102,6 +114,7 @@ jobs:
       - run: ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
       - run: ./kerl status
       - run: *activate_then_test_for_crypto
+      - run: *activate_then_test_docsh
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
@@ -154,6 +167,7 @@ jobs:
             echo PASS app $app
           done
           kerl_deactivate
+      - run: *activate_then_test_docsh
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
@@ -177,6 +191,7 @@ jobs:
       - run: ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
       - run: ./kerl status
       - run: *activate_then_test_for_crypto
+      - run: *activate_then_test_docsh
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
 
@@ -197,5 +212,6 @@ jobs:
       - run: ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
       - run: ./kerl status
       - run: *activate_then_test_for_crypto
+      - run: *activate_then_test_docsh
       - run: ./kerl delete installation $(./kerl path install_$_KERL_VSN)
       - run: ./kerl delete build "$_KERL_VSN"
