--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,37 @@ os: osx
 
 env:
   global:
-    - KERL_BASE_DIR="$TMPDIR"/.kerl
-    - KERL_BUILD_BACKEND=git
-    - KERL_CONFIGURE_DISABLE_APPLICATIONS='odbc'
+  - KERL_BASE_DIR="$TMPDIR"/.kerl
+  - KERL_BUILD_BACKEND=git
+  - KERL_CONFIGURE_DISABLE_APPLICATIONS='odbc'
   matrix:
-    - _KERL_VSN=19.2
-    - _KERL_VSN=18.3
-    - _KERL_VSN=17.5
-    - _KERL_VSN=R16B03-1
+  - _KERL_VSN=21.0
+  - _KERL_VSN=20.3
+  - _KERL_VSN=19.3
+  - _KERL_VSN=18.3
+  - _KERL_VSN=17.5
+  - _KERL_VSN=R16B03-1
 
 before_script: set -e
 after_script: set +e
 script:
-  - ./kerl update releases
-  - travis_wait 45 ./kerl build "$_KERL_VSN" "$_KERL_VSN"
-  - ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
-  - ./kerl status
-  - source $(./kerl path install_$_KERL_VSN)/activate
-  - erl -s crypto -s init stop
-  - kerl_deactivate
-  - ./kerl delete installation $(./kerl path install_$_KERL_VSN)
-  - ./kerl delete build "$_KERL_VSN"
+- ./kerl update releases
+- travis_wait 45 ./kerl build "$_KERL_VSN" "$_KERL_VSN"
+- ./kerl install "$_KERL_VSN" "install_$_KERL_VSN"
+- ./kerl status
+- |
+  source $(./kerl path install_$_KERL_VSN)/activate
+  erl -s crypto -s init stop
+  kerl_deactivate
+- |
+  otp_major=$(echo "$_KERL_VSN" | cut -d. -f1)
+  if ((travis_otp_major >= 18)); then
+    source $(./kerl path install_$_KERL_VSN)/activate
+    ./kerl install-docsh
+    kerl_deactivate
+    source $(./kerl path install_$_KERL_VSN)/activate
+    erl -noshell -eval 'h(proplists).' -s init stop
+    kerl_deactivate
+  fi
+- ./kerl delete installation $(./kerl path install_$_KERL_VSN)
+- ./kerl delete build "$_KERL_VSN"
